--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license":"MIT",
     "require": {
         "symfony/http-foundation": "^4.3",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "^2.6",
+        "nikic/fast-route": "^1.3"
     },
     "psr4-autoload": {
       
