--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,31 @@
 {
-    "name":"oliver021/x2core",
-    "description": "A library to provider code to develop Web app",
-    "author": "Oliver Valiente <oliver021val@gmail.com>",
-    "license":"MIT",
+    "name": "oliver021/x2core",
+    "description": "The library to develop web app",
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "oliver021",
+            "email": "oliver021val@gmail.com"
+        }
+    ],
     "require": {
         "symfony/http-foundation": "^4.3",
-        "doctrine/orm": "^2.6",
-        "nikic/fast-route": "^1.3"
+        "doctrine/dbal": "^2.9",
+        "monolog/monolog": "^1.24",
+        "twig/twig": "^2.11"
     },
-    "psr4-autoload": {
-      
+    "require-dev": {
+        "phpunit/phpunit": "^4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "X2Core\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
+        }
     }
 }
