--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/http-foundation": "^4.3",
         "doctrine/dbal": "^2.9",
         "monolog/monolog": "^1.24",
-        "twig/twig": "^2.11"
+        "twig/twig": "^2.11",
+        "doctrine/cache": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0"
